paper - re-arrangements

--- a/paper/sample-papers/sections/04-04-iris.tex
+++ b/paper/sample-papers/sections/04-04-iris.tex
@@ -25,166 +25,8 @@ This marks a natural boundary for \textbf{credibility} of the conformal classifi
 }.
 When $\epsilon \approx b\_err$, we reach max of $oneC$ and $oneC \approx 1 - b\_err$ and $avgC=1$.
 
-\begin{figure}[htbp]
-\floatconts
-  {fig:iris}
-  {\caption{Results for \textit{iris} dataset.}}
-  {%
-    \subfigure[Distribution between classes]{
-    \label{fig:iris:dist-class}%
-    \includeteximage{plots/iris-dist-class}
-    }%
-    \qquad
-    \subfigure[Baseline error, $b\_err$]{\label{fig:iris:baseline-error}%
-      \includeteximage{plots/iris-baseline-error}
-      }
-    \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:iris:oneC-SVM-DT}%
-      \includeteximage{plots/iris-oneC-0}
-      %\includeteximage{plots/iris-dist-class}
-      }
-    \qquad
-    \subfigure[$avgC$: SVM and DT]{\label{fig:iris:avgC-SVM-DT}%
-      \includeteximage{plots/iris-avgC-0}
-      }
-    \qquad
-    \subfigure[$oneC$: KNN and Ada]{\label{fig:iris:oneC-KNN-Ada}%
-      \includeteximage{plots/iris-oneC-2}
-      }
-    \qquad
-    \subfigure[$avgC$: KNN and Ada]{\label{fig:iris:avgC-KNN-Ada}%
-      \includeteximage{plots/iris-avgC-2}
-      }
-    \qquad
-    \subfigure[$oneC$: GNB and MPR]{\label{fig:iris:oneC-GNB-MPR}%
-      \includeteximage{plots/iris-oneC-4}
-      }
-    \qquad
-    \subfigure[$avgC$: GNB and MPR]{\label{fig:iris:avgC-GNB-MPR}%
-      \includeteximage{plots/iris-avgC-4}
-      }
-    \qquad
-    \subfigure[$oneC$: RF and QDA]{\label{fig:iris:oneC-RF-QDA}%
-      \includeteximage{plots/iris-oneC-6}
-      }
-    \qquad
-    \subfigure[$avgC$: RF and QDA]{\label{fig:iris:avgC-RF-QDA}%
-      \includeteximage{plots/iris-avgC-6}
-      }
-  }
-\end{figure}
+\include{sections/4-iris-data/plots}
 
-\begin{table}[htbp]
-\scriptsize
- % The first argument is the label.
- % The caption goes in the second argument, and the table contents
- % go in the third argument.
-\floatconts
-  {tab:iris}%
-  {\caption{iris dataset}}%
-  {
-\begin{tabular}{cl|lll|lll|lll|lll|lll}
-             && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $-$        &            &            & $+$        &            &            & $+$        &            &            & $+$         \\
-&ip\_m        &            &            &            &            &            & $-$        &            &            & $+$        &            &            & $+$        &            &            & $+$         \\
-&m            &            &            &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{SVM}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            & $-$         \\
-&ip\_m        &            &            &            &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            & $-$         \\
-&m            &            &            &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $+$        &            & $-$        & $-$        &            &            & $+$        &            &            & $+$         \\
-&ip\_m        &            &            &            &            &            & $+$        & $+$        &            & $-$        &            &            & $+$        &            &            & $+$         \\
-&m            &            &            &            & $-$        & $-$        &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{DT}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            & $-$        & $-$        &            &            & $-$        &            &            & $-$         \\
-&ip\_m        &            &            &            &            &            & $+$        & $+$        &            & $-$        &            &            & $-$        &            &            & $-$         \\
-&m            &            &            &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{KNN}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{Ada}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
-&ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
-&m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            &            &            &            &            &            &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{GNB}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            &             \\
-&ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            &             \\
-&m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            &            &            &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $+$         \\
-&ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $+$         \\
-&m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{MPR}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            & $-$         \\
-&ip\_m        &            &            &            &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            & $-$         \\
-&m            &            &            &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $-$        &            & $-$        & $-$        &            &            & $-$        &            &            & $-$         \\
-&ip\_m        &            &            &            &            &            & $-$        & $+$        &            & $-$        &            &            & $-$        &            &            & $-$         \\
-&m            &            &            &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{RF}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $-$        &            & $-$        & $-$        &            &            & $+$        &            &            & $+$         \\
-&ip\_m        &            &            &            &            &            & $-$        & $+$        &            & $+$        &            &            & $+$        &            &            & $+$         \\
-&m            &            &            &            & $+$        & $+$        &            & $+$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{QDA}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
-&ip\_m        &            &            &            &            &            & $+$        &            &            & $+$        &            &            &            &            &            &             \\
-&m            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            &            &            &            &            &            &             \\
-\hline
-\hline
-\hline
-\end{tabular}
+\include{sections/4-iris-data/table}
 
-  }
-\end{table}
+%\include{sections/4-iris-data/table_threshold}
