--- a/paper/sample-papers/sections/04-06-wave.tex
+++ b/paper/sample-papers/sections/04-06-wave.tex
@@ -1,167 +1,7 @@
 \subsection{wave}
 
-\begin{figure}[htbp]
-\floatconts
-  {fig:wave}
-  {\caption{Results for \textit{wave} dataset.}}
-  {%
-    \subfigure[Distribution between classes]{
-    \label{fig:wave:dist-class}%
-    \includeteximage{plots/wave-dist-class}
-    }%
-    \qquad
-    \subfigure[Baseline error, $b\_err$]{\label{fig:wave:baseline-error}%
-      \includeteximage{plots/wave-baseline-error}
-      }
-    \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:wave:oneC-SVM-DT}%
-      \includeteximage{plots/wave-oneC-0}
-      %\includeteximage{plots/wave-dist-class}
-      }
-    \qquad
-    \subfigure[$avgC$: SVM and DT]{\label{fig:wave:avgC-SVM-DT}%
-      \includeteximage{plots/wave-avgC-0}
-      }
-    \qquad
-    \subfigure[$oneC$: KNN and Ada]{\label{fig:wave:oneC-KNN-Ada}%
-      \includeteximage{plots/wave-oneC-2}
-      }
-    \qquad
-    \subfigure[$avgC$: KNN and Ada]{\label{fig:wave:avgC-KNN-Ada}%
-      \includeteximage{plots/wave-avgC-2}
-      }
-    \qquad
-    \subfigure[$oneC$: GNB and MPR]{\label{fig:wave:oneC-GNB-MPR}%
-      \includeteximage{plots/wave-oneC-4}
-      }
-    \qquad
-    \subfigure[$avgC$: GNB and MPR]{\label{fig:wave:avgC-GNB-MPR}%
-      \includeteximage{plots/wave-avgC-4}
-      }
-    \qquad
-    \subfigure[$oneC$: RF and QDA]{\label{fig:wave:oneC-RF-QDA}%
-      \includeteximage{plots/wave-oneC-6}
-      }
-    \qquad
-    \subfigure[$avgC$: RF and QDA]{\label{fig:wave:avgC-RF-QDA}%
-      \includeteximage{plots/wave-avgC-6}
-      }
-  }
-\end{figure}
+\include{sections/6-wave-data/plots}
 
+\include{sections/6-wave-data/table_threshold}
 
-
-\begin{table}[htbp]
-\scriptsize
- % The first argument is the label.
- % The caption goes in the second argument, and the table contents
- % go in the third argument.
-\floatconts
-  {tab:wave-results}%
-  {\caption{wave dataset}}%
-  {
-\begin{tabular}{cl|lll|lll|lll|lll|lll}
-             && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $-$        &            &            & $+$         \\
-&ip\_m        &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $-$        &            &            & $+$         \\
-&m            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $+$        &            & $-$        & $-$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{SVM}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            & $+$*       &            &            & $+$*       &            &            & $+$        &            &            & $+$        &            &            & $-$         \\
-&ip\_m        &            &            & $+$*       &            &            & $+$*       &            &            & $+$        &            &            & $+$        &            &            & $-$         \\
-&m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $+$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $-$        &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$         \\
-&ip\_m        &            &            & $-$        & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$        & $+$        &            & $-$         \\
-&m            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{DT}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            & $+$        &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$        &            & $-$        & $+$         \\
-&ip\_m        &            &            & $+$        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$         \\
-&m            & $-$        & $-$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            & $-$         \\
-&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            & $-$         \\
-&m            &            &            &            &            &            &            &            &            &            &            &            &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{KNN}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            & $-$         \\
-&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            & $-$         \\
-&m            &            &            &            &            &            &            &            &            &            &            &            &            & $+$        & $+$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $+$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*        \\
-&ip\_m        & $+$        &            & $+$*       & $+$*       &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*        \\
-&m            & $-$*       & $-$*       &            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{Ada}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$*       & $-$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*        \\
-&ip\_m        & $+$        &            & $+$*       & $+$*       &            & $+$        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*        \\
-&m            & $-$*       & $-$*       &            & $+$        & $-$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $-$         \\
-&ip\_m        &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $+$        &            &            & $-$         \\
-&m            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{GNB}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$        &            &            & $+$         \\
-&ip\_m        &            &            & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$        &            &            & $+$         \\
-&m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            &            & $-$        &            &            & $-$         \\
-&ip\_m        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        &            &            & $-$        &            &            & $-$         \\
-&m            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{MPR}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $+$        &            & $-$        & $+$        &            &            & $+$        &            &            & $+$         \\
-&ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$        &            &            & $+$        &            &            & $+$         \\
-&m            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       & $-$        &            & $-$*       & $-$*       &            & $-$*       & $-$*        \\
-&ip\_m        & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*        \\
-&m            & $-$        & $-$*       &            & $-$        & $-$*       &            & $+$        & $-$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{RF}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$*       & $-$        &            & $-$        & $-$         \\
-&ip\_m        & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $-$         \\
-&m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $+$        & $-$*       &            & $+$        & $+$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            & $-$        &            &            & $+$        &            &            &             \\
-&ip\_m        &            &            &            &            &            &            &            &            & $-$        &            &            & $+$        &            &            &             \\
-&m            &            &            &            &            &            &            & $+$        & $+$        &            & $-$        & $-$        &            &            &            &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{QDA}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            & $+$*       &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            &             \\
-&ip\_m        &            &            & $+$*       &            &            & $+$        &            &            & $-$        &            &            & $-$        &            &            &             \\
-&m            & $-$*       & $-$*       &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &            &            &            &             \\
-\hline
-\hline
-\hline
-\end{tabular}
-
-  }
-\end{table}
+%\include{sections/6-wave-data/table}
