--- a/paper/sample-papers/sections/04-07-wineR.tex
+++ b/paper/sample-papers/sections/04-07-wineR.tex
@@ -1,171 +1,9 @@
 \subsection{wineRed}\footnote{\textcolor{red}{Check classes. Why do we have 8 classes here?}}
 
 
+\include{sections/7-wineR-data/plots}
 
+\include{sections/7-wineR-data/table_threshold}
 
-\begin{figure}[htbp]
-\floatconts
-  {fig:wineRed}
-  {\caption{Results for \textit{wineRed} dataset}}
-  {%
-    \subfigure[Distribution between classes]{
-    \label{fig:wineRed:dist-class}%
-    \includeteximage{plots/wine_Red-dist-class}
-    }%
-    \qquad
-    \subfigure[Baseline error, $b\_err$]{\label{fig:wineRed:baseline-error}%
-      \includeteximage{plots/wine_Red-baseline-error}
-      }
-    \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:wineRed:oneC-SVM-DT}%
-      \includeteximage{plots/wine_Red-oneC-0}
-      %\includeteximage{plots/wine_Red-dist-class}
-      }
-    \qquad
-    \subfigure[$avgC$: SVM and DT]{\label{fig:wineRed:avgC-SVM-DT}%
-      \includeteximage{plots/wine_Red-avgC-0}
-      }
-    \qquad
-    \subfigure[$oneC$: KNN and Ada]{\label{fig:wineRed:oneC-KNN-Ada}%
-      \includeteximage{plots/wine_Red-oneC-2}
-      }
-    \qquad
-    \subfigure[$avgC$: KNN and Ada]{\label{fig:wineRed:avgC-KNN-Ada}%
-      \includeteximage{plots/wine_Red-avgC-2}
-      }
-    \qquad
-    \subfigure[$oneC$: GNB and MPR]{\label{fig:wineRed:oneC-GNB-MPR}%
-      \includeteximage{plots/wine_Red-oneC-4}
-      }
-    \qquad
-    \subfigure[$avgC$: GNB and MPR]{\label{fig:wineRed:avgC-GNB-MPR}%
-      \includeteximage{plots/wine_Red-avgC-4}
-      }
-    \qquad
-    \subfigure[$oneC$: RF and QDA]{\label{fig:wineRed:oneC-RF-QDA}%
-      \includeteximage{plots/wine_Red-oneC-6}
-      }
-    \qquad
-    \subfigure[$avgC$: RF and QDA]{\label{fig:wineRed:avgC-RF-QDA}%
-      \includeteximage{plots/wine_Red-avgC-6}
-      }
-  }
-\end{figure}
+%\include{sections/7-wineR-data/table}
 
-
-
-\begin{table}[htbp]
-\scriptsize
- % The first argument is the label.
- % The caption goes in the second argument, and the table contents
- % go in the third argument.
-\floatconts
-  {tab:wineRed-results}%
-  {\caption{wineRed dataset}}%
-  {
-\begin{tabular}{cl|lll|lll|lll|lll|lll}
-             && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$         \\
-&ip\_m        & $+$*       &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $+$         \\
-&m            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $-$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{SVM}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$        & $+$*        \\
-&ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$*        \\
-&m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
-&ip\_m        & $+$        &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*        \\
-&m            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{DT}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
-&ip\_m        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
-&m            & $+$        & $+$        &            & $+$        & $+$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            &            & $-$*        \\
-&ip\_m        &            &            &            & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$        &            &            & $-$*        \\
-&m            &            &            &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$*       & $+$*       &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{KNN}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            &            & $+$*        \\
-&ip\_m        &            &            &            & $+$        &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $+$        &            &            & $+$*        \\
-&m            &            &            &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $-$        &            & $-$*       & $-$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $+$        &            & $-$        & $-$         \\
-&ip\_m        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $+$*       & $+$        &            & $-$         \\
-&m            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $-$        & $-$*       &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{Ada}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $-$        &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
-&ip\_m        & $+$        &            & $+$*       & $+$        &            & $-$        & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*        \\
-&m            & $-$*       & $-$*       &            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
-&ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*        \\
-&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{GNB}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$        &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
-&ip\_m        & $+$        &            & $+$        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
-&m            & $-$        & $-$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
-
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$         \\
-&ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$        & $+$        &            & $+$         \\
-&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$        & $-$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{MPR}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$        & $+$*        \\
-&ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$*        \\
-&m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$         \\
-&ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$        & $+$*       &            & $+$         \\
-&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$        & $-$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{RF}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$         \\
-&ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*        \\
-&m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            &            & $-$*        \\
-&ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$*       &            &            & $-$*        \\
-&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{QDA}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $-$        &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            &            & $+$*        \\
-&ip\_m        & $+$        &            & $-$        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       &            &            & $+$*        \\
-&m            & $+$        & $+$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
-\hline
-\hline
-\hline
-\end{tabular}
-
-  }
-\end{table}
