--- a/paper/sample-papers/sections/3-glass-data/table_threshold.tex
+++ b/paper/sample-papers/sections/3-glass-data/table_threshold.tex
@@ -4,8 +4,8 @@
  % The caption goes in the second argument, and the table contents
  % go in the third argument.
 \floatconts
-  {tab:iris}%
-  {\caption{iris dataset}}%
+  {tab:glass}%
+  {\caption{glass dataset}}%
   {
 \begin{tabular}{cl|lll|lll|lll|lll|lll}
              && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
