--- a/paper/sample-papers/sections/04-02-cars.tex
+++ b/paper/sample-papers/sections/04-02-cars.tex
@@ -3,166 +3,8 @@
 Results for \textit{cars} dataset are presented in \cref{fig:cars} and \cref{tab:cars}. Dataset is unbalanced, \cref{fig:cars:dist-class}. The baseline error ranges from <7\% to 95\% (QDA). No visible difference for SVM, DT (only avgC for $\epsilon = 0.01$
 
 
-\begin{figure}[htbp]
-\floatconts
-  {fig:cars}
-  {\caption{Results for \textit{cars} dataset.}}
-  {%
-    \subfigure[Distribution between classes]{
-    \label{fig:cars:dist-class}%
-    \includeteximage{plots/cars-dist-class}
-    }%
-    \qquad
-    \subfigure[Baseline error, $b\_err$]{\label{fig:cars:baseline-error}%
-      \includeteximage{plots/cars-baseline-error}
-      }
-    \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:cars:oneC-SVM-DT}%
-      \includeteximage{plots/cars-oneC-0}
-      %\includeteximage{plots/cars-dist-class}
-      }
-    \qquad
-    \subfigure[$avgC$: SVM and DT]{\label{fig:cars:avgC-SVM-DT}%
-      \includeteximage{plots/cars-avgC-0}
-      }
-    \qquad
-    \subfigure[$oneC$: KNN and Ada]{\label{fig:cars:oneC-KNN-Ada}%
-      \includeteximage{plots/cars-oneC-2}
-      }
-    \qquad
-    \subfigure[$avgC$: KNN and Ada]{\label{fig:cars:avgC-KNN-Ada}%
-      \includeteximage{plots/cars-avgC-2}
-      }
-    \qquad
-    \subfigure[$oneC$: GNB and MPR]{\label{fig:cars:oneC-GNB-MPR}%
-      \includeteximage{plots/cars-oneC-4}
-      }
-    \qquad
-    \subfigure[$avgC$: GNB and MPR]{\label{fig:cars:avgC-GNB-MPR}%
-      \includeteximage{plots/cars-avgC-4}
-      }
-    \qquad
-    \subfigure[$oneC$: RF and QDA]{\label{fig:cars:oneC-RF-QDA}%
-      \includeteximage{plots/cars-oneC-6}
-      }
-    \qquad
-    \subfigure[$avgC$: RF and QDA]{\label{fig:cars:avgC-RF-QDA}%
-      \includeteximage{plots/cars-avgC-6}
-      }
-  }
-\end{figure}
+\include{sections/2-cars-data/plots}
 
-\begin{table}[htbp]
-\scriptsize
- % The first argument is the label.
- % The caption goes in the second argument, and the table contents
- % go in the third argument.
-\floatconts
-  {tab:cars}%
-  {\caption{cars dataset}}%
-  {
-\begin{tabular}{cl|lll|lll|lll|lll|lll}
-             && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$        &            &            & $-$        &            &            & $-$        &            &            & $+$        &            &            & $+$         \\
-&ip\_m        & $+$        &            & $-$        &            &            & $-$        &            &            & $-$        &            &            & $+$        &            &            & $+$         \\
-&m            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{SVM}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            &            & $+$        &            &            & $+$        &            &            & $-$        &            &            & $-$         \\
-&ip\_m        & $+$        &            & $+$*       &            &            & $+$        &            &            & $+$        &            &            & $-$        &            &            & $-$         \\
-&m            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            &            & $-$         \\
-&ip\_m        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        &            &            & $-$         \\
-&m            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{DT}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            &            & $+$         \\
-&ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        &            &            & $+$         \\
-&m            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            &            & $-$         \\
-&ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       &            &            & $-$         \\
-&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{KNN}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            &            & $-$         \\
-&ip\_m        & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       &            &            & $-$         \\
-&m            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$        & $+$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            & $-$        & $-$        &            &            & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
-&ip\_m        & $+$        &            & $-$        & $+$        &            & $-$        &            &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*        \\
-&m            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{Ada}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            & $-$        & $+$*       &            &            & $+$        &            & $-$        & $+$        &            & $-$        & $+$         \\
-&ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$*       &            &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$         \\
-&m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$        & $-$*       &            &            & $-$        &            &            & $-$*       &            &            & $-$        &            &            & $-$         \\
-&ip\_m        & $+$        &            & $-$        &            &            & $-$        &            &            & $-$*       &            &            & $-$        &            &            & $-$         \\
-&m            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{GNB}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$*        \\
-&ip\_m        & $+$        &            & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$*       &            &            & $+$*        \\
-&m            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$*       &            & $-$        & $-$        &            &            & $-$         \\
-&ip\_m        & $+$*       &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$*       & $+$        &            & $-$        &            &            & $-$         \\
-&m            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{MPR}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $+$        &            &            & $+$         \\
-&ip\_m        & $+$        &            & $+$*       & $+$        &            & $+$        & $+$        &            & $-$        & $+$        &            & $+$        &            &            & $+$         \\
-&m            & $-$        & $-$*       &            & $+$        & $-$        &            & $+$        & $+$        &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$        &            & $-$*       & $-$*       &            & $-$        & $-$*        \\
-&ip\_m        & $+$*       &            & $-$*       & $+$*       &            & $+$        & $+$*       &            & $+$*       & $+$*       &            & $-$*       & $+$        &            & $-$*        \\
-&m            & $+$*       & $+$*       &            & $+$*       & $-$        &            & $+$        & $-$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{RF}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$        & $+$        &            & $-$        & $+$         \\
-&ip\_m        & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$         \\
-&m            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{QDA}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&ip\_m        &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-&m            &            &            &            &            &            &            &            &            &            &            &            &            &            &            &             \\
-\hline
-\hline
-\hline
-\end{tabular}
+\include{sections/2-cars-data/table_threshold}
 
-  }
-\end{table}
+%\include{sections/2-cars-data/table}
