--- a/paper/sample-papers/sections/04-03-glass.tex
+++ b/paper/sample-papers/sections/04-03-glass.tex
@@ -12,166 +12,8 @@ classifiers the previous observed pattern holds: \textit{margin} is better for $
 \textit{inverse probability} is better for $avgC$. In all these cases, \textit{ip\_m} allows to improve $oneC$ obtained by the \textit{inverse probability} function and improves both \textit{inverse probability} and \textit{margin} in terms of $avgC$. In case of MPR classifier, we can observe improvement in terms of both metrics when \textit{ip\_m} is used. It means that this metric is the best for conformal predictor based on MPR, see \cref{fig:glass:oneC-GNB-MPR}
 and \cref{fig:glass:avgC-GNB-MPR}.
 
-\begin{figure}[htbp]
-\floatconts
-  {fig:glass}
-  {\caption{Results for \textit{glass} dataset.}}
-  {%
-    \subfigure[Distribution between classes]{
-    \label{fig:glass:dist-class}%
-    \includeteximage{plots/glass-dist-class}
-    }%
-    \qquad
-    \subfigure[Baseline error, $b\_err$]{\label{fig:glass:baseline-error}%
-      \includeteximage{plots/glass-baseline-error}
-      }
-    \qquad
-    \subfigure[$oneC$: SVM and DT]{\label{fig:glass:oneC-SVM-DT}%
-      \includeteximage{plots/glass-oneC-0}
-      %\includeteximage{plots/glass-dist-class}
-      }
-    \qquad
-    \subfigure[$avgC$: SVM and DT]{\label{fig:glass:avgC-SVM-DT}%
-      \includeteximage{plots/glass-avgC-0}
-      }
-    \qquad
-    \subfigure[$oneC$: KNN and Ada]{\label{fig:glass:oneC-KNN-Ada}%
-      \includeteximage{plots/glass-oneC-2}
-      }
-    \qquad
-    \subfigure[$avgC$: KNN and Ada]{\label{fig:glass:avgC-KNN-Ada}%
-      \includeteximage{plots/glass-avgC-2}
-      }
-    \qquad
-    \subfigure[$oneC$: GNB and MPR]{\label{fig:glass:oneC-GNB-MPR}%
-      \includeteximage{plots/glass-oneC-4}
-      }
-    \qquad
-    \subfigure[$avgC$: GNB and MPR]{\label{fig:glass:avgC-GNB-MPR}%
-      \includeteximage{plots/glass-avgC-4}
-      }
-    \qquad
-    \subfigure[$oneC$: RF and QDA]{\label{fig:glass:oneC-RF-QDA}%
-      \includeteximage{plots/glass-oneC-6}
-      }
-    \qquad
-    \subfigure[$avgC$: RF and QDA]{\label{fig:glass:avgC-RF-QDA}%
-      \includeteximage{plots/glass-avgC-6}
-      }
-  }
-\end{figure}
+\include{sections/3-glass-data/plots}
 
-\begin{table}[htbp]
-\scriptsize
- % The first argument is the label.
- % The caption goes in the second argument, and the table contents
- % go in the third argument.
-\floatconts
-  {tab:glass}%
-  {\caption{glass dataset}}%
-  {
-\begin{tabular}{cl|lll|lll|lll|lll|lll}
-             && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
-&ip\_m        &            &            &            & $+$*       &            & $-$*       & $+$*       &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
-&m            &            &            &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{SVM}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $+$*       &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$         \\
-&ip\_m        &            &            &            & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$         \\
-&m            &            &            &            & $-$*       & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            &            & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$         \\
-&ip\_m        &            &            &            &            &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
-&m            &            &            &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{DT}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            &            & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$         \\
-&ip\_m        &            &            &            &            &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
-&m            &            &            &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
-&ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$*       & $+$        &            & $-$         \\
-&m            &            &            &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{KNN}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$         \\
-&ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
-&m            &            &            &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$*       & $-$*        \\
-&ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$*       & $+$*       &            & $-$*        \\
-&m            &            &            &            & $+$        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{Ada}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
-&ip\_m        &            &            &            & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
-&m            &            &            &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
-&ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$*       & $+$        &            & $-$*       & $+$        &            & $-$*        \\
-&m            &            &            &            & $+$        & $+$        &            & $+$*       & $+$*       &            & $+$*       & $+$*       &            & $+$*       & $+$*       &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{GNB}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $+$        &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*        \\
-&ip\_m        &            &            &            & $+$        &            & $+$        & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
-&m            &            &            &            & $-$        & $-$        &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $+$         \\
-&ip\_m        &            &            &            & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$         \\
-&m            &            &            &            & $+$        & $-$        &            & $+$        & $-$        &            & $+$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{MPR}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$*       &            & $-$        & $+$         \\
-&ip\_m        &            &            &            & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*        \\
-&m            &            &            &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$*       &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$*        \\
-&ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
-&m            &            &            &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{RF}}  & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $+$        &            & $-$        & $+$*       &            & $-$        & $+$        &            & $-$        & $+$         \\
-&ip\_m        &            &            &            & $+$        &            & $+$*       & $+$        &            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$         \\
-&m            &            &            &            & $-$        & $-$*       &            & $-$*       & $-$*       &            & $-$        & $-$        &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$oneC$}}&ip           &            &            &            &            & $-$        & $-$*       &            & $-$        & $-$*       &            & $-$        & $-$        &            & $-$        & $-$         \\
-&ip\_m        &            &            &            & $+$        &            & $-$*       & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$         \\
-&m            &            &            &            & $+$*       & $+$*       &            & $+$*       & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &             \\
-\hline
-\multicolumn{2}{l|}{\textbf{QDA}} & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m          & ip         & ip\_m      & m           \\
-\hline
-\multirow{3}{*}{\rotatebox[origin=c]{90}{$avgC$}}&ip           &            &            &            &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $-$        &            & $-$        & $+$         \\
-&ip\_m        &            &            &            & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $-$        & $+$        &            & $+$         \\
-&m            &            &            &            & $+$        & $+$        &            & $+$        & $+$        &            & $+$        & $+$        &            & $-$        & $-$        &             \\
-\hline
-\hline
-\hline
-\end{tabular}
+\include{sections/3-glass-data/table_threshold}
 
-  }
-\end{table}
+%\include{sections/3-glass-data/table}
